fix links z-order with overlapping dialogs
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtLoginApp/trunk@12601 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/WebApp/resources/css/style.css
+++ b/src/main/WebApp/resources/css/style.css
@@ -149,6 +149,7 @@ a.continue.birthday {
 	padding: 0.5em;
 	bottom: 0; left: 0; right: 0;
 	position: absolute;
+	z-index: -1;
 }
 
 .signin .wrapper {
